--- a/B8Paper/abstract.tex
+++ b/B8Paper/abstract.tex
@@ -1,12 +1,28 @@
-We propose a technique for separating 0{\nbb}-decay events from
-background due to $^{10}$C decays and $^8$B solar neutrino
-interactions in a liquid scintillator detector. These represent the
-key backgrounds at shallow and deep sites. In particular, we focus
-on \B~background suppression which is traditionally viewed as irreducible
-background to 0\nbb-decay searches. The technique compares
-event topology of the signal and background events using spherical
-harmonics analysis of the early light emitted in signal and
-background events. Selection of early photons using fast photo-detectors
-allows for separation of directional Cherenkov from isotropic
-scintillation light and identification of event topologies based
-on the spatial distribution of the early photons in the detector.
+We present a technique for separating double beta decay (\bb-decay) events from 
+background due to \B~solar neutrino interactions. This background becomes dominant 
+in a kilo-ton scale liquid scintillator detector. In searches for the neutrinoless 
+double beta decay (0\nbb-decay) \B~background is usually considered as irreducible 
+due to an overlap in the energy deposition. We note that in a liquid scintillator 
+detector electrons from 0\nbb-decay often exceed Cherenkov threshold. Selection of 
+early photons using fast photo-detectors separates prompt directional Cherenkov 
+light from delayed isotropic scintillation light. This leads to the possibility of 
+reconstructing the event topology of 0\nbb-decay candidate events by analyzing 
+spatial distribution of early photons. Using a simulation of a 6.5~m radius liquid 
+scintillator detector with 100~ps resolution photo-detectors, we perform a 
+spherical harmonics analysis of the early light emitted in each candidate event and 
+show the difference between 0\nbb-decay signal and \B~background events. We discuss 
+key detector parameters that affect the separation power.
+
+
+%We propose a technique for separating 0{\nbb}-decay events from
+%background due to $^{10}$C decays and $^8$B solar neutrino
+%interactions in a liquid scintillator detector. These represent the
+%key backgrounds at shallow and deep sites. In particular, we focus
+%on \B~background suppression which is traditionally viewed as irreducible
+%background to 0\nbb-decay searches. The technique compares
+%event topology of the signal and background events using spherical
+%harmonics analysis of the early light emitted in signal and
+%background events. Selection of early photons using fast photo-detectors
+%allows for separation of directional Cherenkov from isotropic
+%scintillation light and identification of event topologies based
+%on the spatial distribution of the early photons in the detector.
