--- a/B8Paper/authors.tex
+++ b/B8Paper/authors.tex
@@ -2,7 +2,7 @@
 \cortext[cor1]{Corresponding Author: \href{mailto:elagin@hep.uchicago.edu}{\tt{elagin@hep.uchicago.edu}}}
 \author[UChicago]{Henry J. Frisch}
 \author[UCLA]{Brian Naranjo}
-\author[MIT,LBL]{Jonathan Ouellet}
+\author[MIT]{Jonathan Ouellet}
 \author[MIT]{Lindley Winslow}
 \author[MIT]{Taritree Wongjirad}
 %\author[OPTIN]{{\bf Opt in}}
