--- a/B8Paper/common_commands.tex
+++ b/B8Paper/common_commands.tex
@@ -6,6 +6,7 @@
 \newcommand{\bpd}{$\beta^{+}$}
 \newcommand{\bb}{$\beta\beta$}
 \newcommand{\nbb}{\ensuremath{\nu\beta\beta}}
+%\newcommand
 \newcommand{\Te}{$^{130}$Te}
 \newcommand{\Se}{$^{82}$Se}
 \newcommand{\B}{$^{8}$B}
