--- a/B8Paper/spherical_paper.tex
+++ b/B8Paper/spherical_paper.tex
@@ -11,7 +11,7 @@
 \setstretch{2.5}
 %\bibliography
 
-\title{Towards Separating Double-Beta Decay Events from Backgrounds in a Kiloton-Scale Directional Liquid Scintillator Detector}
+\title{Separating Double-Beta Decay Events from Solar Neutrino Interactions in a Kiloton-Scale Liquid Scintillator Detector}
 \input{authors}
 
 \begin{abstract}
