--- a/B8Paper/10-Introduction.tex
+++ b/B8Paper/10-Introduction.tex
@@ -5,7 +5,7 @@ been able to conclusively establish that neutrinos have mass
 \cite{SNO2001,SNO2002,SuperK2002,kamland2003}. However, the nature of
 that mass remains one of the most fundamental open questions in
 particle physics. Is the neutrino unique among the Standard Model
-fermions with a Majorana-type mass \cite{Majorana1937}, as is
+fermions with a Majorana mass \cite{Majorana1937}, as is
 predicted by most beyond the standard model (BSM) theories, or does it
 have a Dirac-type mass like the rest of the fermions? A Majorana-type
 mass would have far reaching implications, from explaining the
@@ -14,14 +14,16 @@ phenomena through the see-saw mechanism
 \cite{GellMann1980,Yanagida1979} to being able to provide the required
 lepton-number violation (LNV) and {\sf CP}-violation needed for
 leptogenesis to explain the baryon asymmetry of the universe
-\cite{Fukugita1986,Luty1992}. Conversely, a Dirac-type neutrino mass
-could point to an underlying symmetry of the Universe.  Presently, the
+\cite{Fukugita1986,Luty1992}. Conversely, a Dirac neutrino mass
+could point to an underlying symmetry of the Universe.  
+
+Presently, the
 most promising technique for answering these questions is the search
 for Neutrinoless Double-Beta (0\nbb) decay \cite{Furry1939}. In this
 decay, a nucleus undergoes a second order $\beta$-decay without
-producing any neutrinos, $(Z,A)\rightarrow(Z+2,A)+2\beta^-$.  This is in comparison to two neutrino double beta (2{\nbb}) decay
-\cite{GoeppertMayer1935}, the Standard Model allowed second order
-\bmd-decay channel where lepton number is conserved by the
+producing any neutrinos, $(Z,A)\rightarrow(Z+2,A)+2\beta^-$.  This is in contrast to two-neutrino double beta (2{\nbb}) decay
+\cite{GoeppertMayer1935}, the second order Standard Model
+\bmd-decay channel in which lepton number is conserved by the
 production of two anti-neutrinos, \mbox{$(Z,A)\rightarrow(Z,A+2)+2\beta+2\bar\nu_e$}.
 
 %This is a detector paper so I don't think we need this detail.
@@ -58,7 +60,7 @@ combination of filtration of the LS to remove internal contaminants,
 self-shielding to minimize the effects of external contaminants, and
 vetoes to reduce muon spallation backgrounds. The backgrounds relevant to
 0{\nbb} decay which cannot be reduced through these means are the
-2{\nbb} decay, electron scattering of $^8$B solar neutrinos and at more shallow depths long-lived spallation products especially $^{10}$C.
+2{\nbb} decay, electron scattering of $^8$B solar neutrinos.% and at more shallow depths long-lived spallation products especially $^{10}$C.
 %(\tau=xx, Q=XX)$.
 
 %\begin{figure}[ht]
@@ -71,20 +73,27 @@ vetoes to reduce muon spallation backgrounds. The backgrounds relevant to
 
 
 The 0{\nbb} signal and these backgrounds have distinctive energy spectra. Since 0{\nbb} decay produces no neutrinos, the full energy of the
-decay is contained within the detector and a peak is observed around the decay $Q$-value. This defines a clear region of interest (ROI) around 
-the $Q$-value. In 2{\nbb} decay, the neutrinos carry away some fraction of the decay energy leading to a broad spectrum from 0~MeV up to the 
-decay $Q$-value. The interaction of \B~solar neutrinos through neutrino-electron elastic scatter (ES) produces produces a spectrum that rises 
-at low energies, producing an effectively flat background in the ROI~\cite{SNOp-B8-bkg}. Finally, the \bpd-decay of \C~proceeds through a 
-long lived excited state of \Bten. In a liquid scintillator detector, the full energy of the decay, positron kinetic energy, annihilation 
-gammas, and de-excitation gammas, is detected. This results in a \bmd-decay spectrum offset from zero by $\sim$1.7~MeV, which corresponds
-to the sum of energy of the gammas from the excited state and annihilation.
+decay is contained within the detector and a peak is observed around the decay $Q$-value. This defines a region of interest (ROI) around 
+the $Q$-value. In 2{\nbb} decay, the neutrinos carry away some fraction of the decay energy leading to a broad spectrum of deposited energy
+from 0~MeV up to the 
+decay $Q$-value. The interaction of \B~solar neutrinos through neutrino-electron elastic scattering (ES) produces a spectrum that rises 
+at low energies, producing an effectively flat background in the ROI~\cite{SNOp-B8-bkg}. 
 
-A detector with good energy resolution can statistically separate these backgrounds from the 0\nbb~ signal. Additional background rejection is possible with the inclusion of directional or topographical information. The two electrons emitted in 0\nbb~ and 2\nbb~ should reconstruct very differently than the single electron from ES or the positron and subsequent  gammas from the \C~decay. In previous work, we have shown that photo-detectors with timing resolution of $\sim$100~ps can be used to resolve the prompt Cherenkov photons from the slower scintillation signal and the resulting distributions can be fit for the position and direction of $\sim$MeV electrons\cite{Aberle2014}. 
+%Finally, the \bpd-decay of \C~proceeds through a 
+%long lived excited state of \Bten. In a liquid scintillator detector, the full energy of the decay, positron kinetic energy, annihilation 
+%gammas, and de-excitation gammas, is detected. This results in a \bmd-decay spectrum offset from zero by $\sim$1.7~MeV, which corresponds
+%to the sum of energy of the gammas from the excited state and annihilation.
 
-In this paper, we examine in detail the time and topographical distributions of 0\nbb~ and these two key backgrounds. We propose a method 
+A detector with good energy resolution can statistically separate these backgrounds from the 0\nbb~ signal. Additional background rejection
+is possible with the inclusion of directional or topographical information. The two electrons emitted in 0\nbb~ and 2\nbb~ should reconstruct 
+very differently from the single electron from \B~events. In previous work, we have shown that photo-detectors with timing resolution 
+of $\sim$100~ps can be used to resolve the prompt Cherenkov photons from the slower scintillation signal and the resulting distributions can 
+be fit for the position and direction of $\sim$MeV electrons\cite{Aberle2014}. 
+
+In this paper, we examine in detail the time and topographical distributions of 0\nbb-decay signal and \B background. We propose a method 
 using spherical harmonic decomposition to analyze the distribution of early photo-electrons (PE) and use this as a discriminant. 
 In Section~\ref{sec:detector_description}, we describe the detector model we will use throughout this paper. Details on event kinematics and
-PE timing for signal an backgrounds are given in Section~\ref{sec:kinematics_and_timing}
+PE timing for signal and background are given in Section~\ref{sec:kinematics_and_timing}
 In Section~\ref{sec:topology_and_harmonics}, we introduce the spherical harmonic decomposition, and discuss the performance of this 
 analysis in Section~\ref{sec:performance}.
 
