--- a/B8Paper/30-SphericalHarmonics.tex
+++ b/B8Paper/30-SphericalHarmonics.tex
@@ -1,13 +1,9 @@
 \section{Event Topology and Spherical Harmonics Analysis}
 \label{sec:topology_and_harmonics}
 
-In this section we provide details about spherical harmonics analysis to separate 0\nbb-decay signal events from backgrounds. 
-We show that spherical harmonics decomposition of the PE hits on the detector surface is sensitive to the event topology. In particular
-we focus on the differences between two-electron (0\nbb-decay events) and single-electron (\B~events) topologies. More complicated 
-event topologies such as \C~background events are also differ from two-electron signal topology. However, as explained further in 
-Sec.~\ref{subsec:c10_spherical_harmonics}, the 0\nbb/\C~separation power strongly depends on the assumptions that are built into the 
-simulation. Therefore we use only 0\nbb/\B~separation as a benchmark test for the spherical harmonics analysis performance. We still 
-show 0\nbb/\C~separation for completness.
+In this section we provide details about spherical harmonics analysis to separate 0\nbb-decay signal events from \B~ background. 
+We show that spherical harmonics decomposition of the PE hits on the detector surface is sensitive to the differences between 
+two-electron (0\nbb-decay events) and single-electron (\B~events) topologies.
 
 
 \subsection{Topology of 0\nbb-decay and \B~Events}
@@ -232,110 +228,5 @@ PE in the histogram bin corresponding to that pair.
 
 Coefficients $f_{lm}$ from Eq.~\ref{eq3} are calculated using a Monte Carlo integration technique. Variables $S_l$'s are calculated using 
 Eqs.\ref{eq4} - \ref{eq6}. {\bf Also need to provide reference to the libraries for Legendre polynomials.}
-
-%----------LARGE COMMENT BLOCK BEGINS-------------
-\begin{comment}
-
-\textbf{ I'm thinking of removing Figs~\ref{fig:SL_topologies_CHE}-\ref{fig:SL_topologies_all}, thus the following paragraphs are in Italic. 
-I think bottom panels in Figs.~\ref{fig:ThreeTopologies_Display_5MeV}-\ref{fig:Te130_Display} convey enough info that it only make sense to use
-$S_0$ and $S_1$}
-
-\begingroup
-  \itshape
-To illustrate spherical harmonics analysis technique we compare distributions of $S_0$, $S_1$, $S_2$, and $S_3$ for the three representative event topologies described in Sec.~\ref{subsec:topology}. Almost all the information about event topology is carried by Cherenkov light. Therefore we first show spherical harmonics for back-to-back,  90$^{\circ}$ and single track topologies based on Cherenkov PEs only (see Fig.~\ref{fig:SL_topologies_CHE}).
-
-Two top panels of Fig.~\ref{fig:SL_topologies_CHE} show 2-dimensional distributions, S0 vs S1 and S2 vs S3, to demonstrate that all four $S_l$'s provide separation between event topologies. No QE is applied in simulation of these events. We also introduce a 1-dimensional variable, S01 (bottom panel of Fig.~\ref{fig:SL_topologies_CHE}), that has the best separation power for majority of event topologies considered in this paper. $S_{01}$ is defined as a projection of S$_1$ vs S$_2$ distribution onto a linear fit of this 2-D distribution.
-
-%\endgroup
-
-\begin{figure*}[h]
-  \centering
-  \includegraphics[width=0.49\textwidth]{ALL/hS0vsS1_topologies_CHELight_VtxSmear0cm_VtxShiftX0cm_33p5ns_center.pdf}
-  \includegraphics[width=0.49\textwidth]{ALL/hS2vsS3_topologies_CHELight_VtxSmear0cm_VtxShiftX0cm_33p5ns_center.pdf}
-  \includegraphics[width=0.9\textwidth]{ALL/hS01_topologies_CHELight_VtxSmear0cm_VtxShiftX0cm_33p5ns_center.pdf}
-  \caption{Spherical harmonics for three event topologies: two
-    back-to-back 1.26~MeV electrons (\emph{black squares and black
-      dotted line}), two 1.26~MeV electrons at 90$^{\circ}$ angle
-    (\emph{blue triangles and blue dashed line}), and a single
-    2.529~MeV electron representing $^{8}$B background (\emph{red
-      crosses and red solid line}). Simulation of 1000 events
-    originated at the center of the sphere. Perfect separation between
-    Cherenkov and scintillation light is implemented in this
-    simulation by using only Cherenkov photons. \emph{Top left:} $S_0$
-    versus $S_1$ scatter plot. Black dotted line is a linear fit of
-    the 90$^{\circ}$ topology and $^{8}$B events. Variable $S_{01}$ is
-    defined as a projection of 2D distribution onto this linear
-    fit. \emph{Top right:} $S_2$ versus $S_3$ scatter
-    plot. \emph{Bottom:} $S_{01}$ distributions for the three
-    topologies. These distributions are normalized to unit area for
-    shape comparison.}
-  \label{fig:SL_topologies_CHE}
-\end{figure*}
-
-
-The effects due to the presence of scintillation light and applying the default QE are shown in Fig.~\ref{fig:SL_topologies_all}. Spherical harmonics of the same three representative event topologies are now calculated using early light (photons with arrival time less than 33.5~ns) that contains both directional Cherenkov light and uniform scintillation light. The of number PE seen by each tube is reduced by the default QE. In this more realistic scenario, the higher order multiple moments, S2 and S3, no longer provide noticeable separation between different event topologies.
-
-
-\begin{figure*}[h]
-  \centering
-  \includegraphics[width=0.49\textwidth]{hS0vsS1_topologies_allLight_VtxSmear0cm_VtxShiftX0cm_33p5ns_center.pdf}
-  \includegraphics[width=0.49\textwidth]{hS2vsS3_topologies_allLight_VtxSmear0cm_VtxShiftX0cm_33p5ns_center.pdf}
-  \includegraphics[width=0.9\textwidth]{hS01_topologies_allLight_VtxSmear0cm_VtxShiftX0cm_33p5ns_center.pdf}
-  \caption{Spherical harmonics for three event topologies: two
-    back-to-back 1.26~MeV electrons (\emph{black squares and black
-      dotted line}), two 1.26~MeV electrons at 90$^{\circ}$ angle
-    (\emph{blue triangles and blue dashed line}), and a single
-    2.529~MeV electron representing $^{8}$B background (\emph{red
-      crosses and red solid line}). Simulation of 1000 events
-    originated at the center of the sphere. Separation between
-    Cherenkov and scintillation light is implemented 33.5~ns cut on
-    the photon arrival time. Perfect vertex reconstruction - true
-    vertex position is used. \emph{Top left:} $S_0$ versus $S_1$
-    scatter plot. Black dotted line is a linear fit of the
-    90$^{\circ}$ topology and $^{8}$B events. Variable $S_{01}$ is
-    defined as a projection of 2D distribution onto this linear
-    fit. \emph{Top right:} $S_2$ versus $S_3$ scatter
-    plot. \emph{Bottom:} $S_{01}$ distributions for the three
-    topologies. These distributions are normalized to unit area for
-    shape comparison}
-\label{fig:SL_topologies_all}
-\end{figure*}
-
-
-\endgroup
-\end{comment}
-%----------LARGE COMMENT BLOCK ENDS-------------
-
-
-\subsection{Spherical harmonics analysis of \C~background events}
-\label{subsec:c10_spherical_harmonics}
-Spherical harmonics analysis should have some sensitivity to distinguish not only two-electron from single-electron topology, but also 
-two-electron from a more complicated multi-particle topology. \C~background events is an good example of multi-particle topology. Event displays
-for two typical \C~events are shown in the top panel of Fig.~\ref{fig:C10_Display}. One event has very few PE due to effects discussed 
-previously in Sec.3 and the other have total number of PEs comparable to signal events.
-
-However, as discussed in Sec.3, ortho-positronium formation is not included in the default Geant-4 package. Therefore, our simulation only 
-describes $\sim$50\% of \C~events. The separation between 0\nbb~signal and those $\sim$50\% of \C~background events using spherical harmonics 
-analysis is shown in the bottom panel of Fig.~\ref{fig:C10_Display}. While counting total number of early PE seems to work well in separating
-0\nbb~and \C~events, spherical harmonics might provide extra separation power, especially if used as a part of a multi-variable discrimination 
-technique.
-
-\begin{figure*}[h]
-  \centering
-  \includegraphics[width=0.45\textwidth]{hEventDisplay_C10_evt_8}
-  \includegraphics[width=0.45\textwidth]{hEventDisplay_C10_evt_2}
-  \includegraphics[width=0.45\textwidth]{hMultipleMoment_C10_allLight_VtxSmear0cm_VtxShiftX0cm_33p5ns_center}
-  \includegraphics[width=0.45\textwidth]{hS0vsS1_Te130_C10_allLight_VtxSmear0cm_VtxShiftX0cm_33p5ns_center}
-  \caption{\emph{Top panels:} Event displays for \C~events. An example of an event with low number of early PEs (\emph{top left})
-    and an example event with complicated topology (\emph{top right}). The default QE and the time cut of 33.5~ns are applied to 
-    both Cherenkov (\emph{triangles}) and scintillation (\emph{crosses}) photons.
-    \emph{Bottom right panel:} Normalized power spectrum $S_l$ calculated for distribution of all PE after the 33.5~ns time cut.
-    {\Te} 0{\nbb}-decay signal (\emph{solid red line}) and {\C} background (\emph{dashed green line}) topologies are compared.
-    Simulation of 1000 signal and background events. The normalized power values $S_l$'s were calculated for each individual event.
-    The horizontal lines correspond to the mean values of $S_l$. The vertical bars show one standard deviation from the mean value. 
-    \emph{Bottom left panel:} Comparison between signal (\emph{red crosses}) and \C~background (\emph{green triangles})
-    on a scatter plot of $S_0$ versus $S_1$.}
-  \label{fig:C10_Display}
-\end{figure*}
 
 
