Modifying acknowledgements to separate C10 and B8 contributions

--- a/B8Paper/acknowledgements.tex
+++ b/B8Paper/acknowledgements.tex
@@ -6,12 +6,10 @@ and for providing data with phase factors for generating 0\nbb- and 2\nbb-decay 
 We are greateful to Christoph Aberle, formely at UCLA, for initial development of Geant-4 
 detector model used at this paper and early contribution to the development of Cherekov/scintillation
 light separation technique. We thank Matthew Wetstein of the Iowa State University for help with vertex reconsruction
-algoroithms and productive discussion on Cherenkov/scintillation light separation (\textbf{unless Matt wants to be
-an author}). We thank Eric Spieglan of the University of Chicago for productive discussions on spherical harmonics
+algoroithms and productive discussion on Cherenkov/scintillation light separation. We thank Eric Spieglan of the 
+University of Chicago for productive discussions on spherical harmonics
 analysis. We also thank Evan Angelico of the University of Chicago for estimating effects of photo-detector position and
-time resolution on the vertex reconstruction and verifying effects of chromatic dispersions. We thank Carla Pilcher of 
-the University of Chicago for discussions on gammas interactions in liquid scintillators.
-We thank Davide Franco of CNRS and Paolo Crivelli of ETH, Zurich for sharing their experience with ortho-positronium 
-simulation in Geant-4. We thank Jan Flusser of Institute of Information Theory and Automation, Czech Academy of Sciences for
+time resolution on the vertex reconstruction and verifying effects of chromatic dispersions.
+We thank Jan Flusser of Institute of Information Theory and Automation, Czech Academy of Sciences for
 helpfull discussions on image processing using moment invariants. Last but not least we thank Mingfang Yeh of 
 Brookhaven National Laboratory for discussions of timing properties of various liquid scintillators.
