--- a/C10Paper/abstract.tex
+++ b/C10Paper/abstract.tex
@@ -1,12 +1,22 @@
-We propose a technique for separating 0{\nbb}-decay events from
-background due to $^{10}$C decays and $^8$B solar neutrino
-interactions in a liquid scintillator detector. These represent the
-key backgrounds at shallow and deep sites. In particular, we focus
-on \B~background suppression which is traditionally viewed as irreducible
-background to 0\nbb-decay searches. The technique compares
-event topology of the signal and background events using spherical
-harmonics analysis of the early light emitted in signal and
-background events. Selection of early photons using fast photo-detectors
-allows for separation of directional Cherenkov from isotropic
-scintillation light and identification of event topologies based
-on the spatial distribution of the early photons in the detector.
+We discuss suppression of background due to \C~decay in a large liquid scintillator detector
+for neutrinoless double beta decay (0\nbb-decay). This background becomes significant at a
+shallow detector site. While there are several handles to discriminate between 0\nbb-decay 
+signal and \C~background we discuss an additional separation that comes from precise 
+measurement of the photon arrival times in each candidate event. Using a simulation of 
+a 6.5~m radius liquid scintillator detector with 100~ps resolution photo-detectors, we show
+that the photons arrival time distribution in \C~events is shifted towards longer arrival times 
+compared to 0\nbb-decay events. 
+
+Since 98\% of \C~decays through an excited state of
+$^{10}$B(718), which has an unusual half-life time of ∼1 ns, the majority of \C~events have 
+a prompt positron accompanied by a delayed 0.718 MeV gamma.
+Lower kinetic energy of the positron in \C~events compared 
+to kinetic energy of the electrons in 0\nbb-decay events diminishes the amount of early 
+light produced by the primary charged particles. Even when the $^{10}$B(718) de-excitation time 
+is smaller than the photo-detector time resolution there is still a delay in the arrival time of
+the photons associated with multiple interactions of the gamma(s).
+
+We also note that the shift in the photons arrival time distribution is further increased in about 
+50\% of \C~events in which an ortho-positronium is formed after the positron thermalized in the
+liquid scintillator.
+
