--- a/C10Paper/10-Introduction.tex
+++ b/C10Paper/10-Introduction.tex
@@ -57,8 +57,7 @@ detector, most backgrounds can be strongly suppressed through a
 combination of filtration of the LS to remove internal contaminants,
 self-shielding to minimize the effects of external contaminants, and
 vetoes to reduce muon spallation backgrounds. The backgrounds relevant to
-0{\nbb} decay which cannot be reduced through these means are the
-2{\nbb} decay, electron scattering of $^8$B solar neutrinos and at more shallow depths long-lived spallation products especially $^{10}$C.
+0{\nbb} decay which could be hard to reduce at a shallow detector depth are long-lived spallation products especially $^{10}$C.
 %(\tau=xx, Q=XX)$.
 
 %\begin{figure}[ht]
@@ -70,23 +69,19 @@ vetoes to reduce muon spallation backgrounds. The backgrounds relevant to
 %\end{figure}
 
 
-The 0{\nbb} signal and these backgrounds have distinctive energy spectra. Since 0{\nbb} decay produces no neutrinos, the full energy of the
-decay is contained within the detector and a peak is observed around the decay $Q$-value. This defines a clear region of interest (ROI) around 
-the $Q$-value. In 2{\nbb} decay, the neutrinos carry away some fraction of the decay energy leading to a broad spectrum from 0~MeV up to the 
-decay $Q$-value. The interaction of \B~solar neutrinos through neutrino-electron elastic scatter (ES) produces produces a spectrum that rises 
-at low energies, producing an effectively flat background in the ROI~\cite{SNOp-B8-bkg}. Finally, the \bpd-decay of \C~proceeds through a 
+The 0{\nbb} signal and all backgrounds have distinctive energy spectra. Since 0{\nbb} decay produces no neutrinos, the full energy of the
+decay is contained within the detector and a peak is observed around the decay $Q$-value. This defines a region of interest (ROI) around 
+the $Q$-value. The \bpd-decay of \C~proceeds through a 
 long lived excited state of \Bten. In a liquid scintillator detector, the full energy of the decay, positron kinetic energy, annihilation 
 gammas, and de-excitation gammas, is detected. This results in a \bmd-decay spectrum offset from zero by $\sim$1.7~MeV, which corresponds
 to the sum of energy of the gammas from the excited state and annihilation.
 
-A detector with good energy resolution can statistically separate these backgrounds from the 0\nbb~ signal. Additional background rejection is possible with the inclusion of directional or topographical information. The two electrons emitted in 0\nbb~ and 2\nbb~ should reconstruct very differently than the single electron from ES or the positron and subsequent  gammas from the \C~decay. In previous work, we have shown that photo-detectors with timing resolution of $\sim$100~ps can be used to resolve the prompt Cherenkov photons from the slower scintillation signal and the resulting distributions can be fit for the position and direction of $\sim$MeV electrons\cite{Aberle2014}. 
+A detector with good energy resolution can statistically separate these backgrounds from the 0\nbb~ signal. Additional rejection of 
+\C~background is possible with the inclusion of precise timing information.
 
-In this paper, we examine in detail the time and topographical distributions of 0\nbb~ and these two key backgrounds. We propose a method 
-using spherical harmonic decomposition to analyze the distribution of early photo-electrons (PE) and use this as a discriminant. 
-In Section~\ref{sec:detector_description}, we describe the detector model we will use throughout this paper. Details on event kinematics and
-PE timing for signal an backgrounds are given in Section~\ref{sec:kinematics_and_timing}
-In Section~\ref{sec:topology_and_harmonics}, we introduce the spherical harmonic decomposition, and discuss the performance of this 
-analysis in Section~\ref{sec:performance}.
+In this paper, we examine in detail the time distribution of 0\nbb~ and \C~ background.  
+In Section~\ref{sec:detector_description}, we describe the detector model we will use throughout this paper. 
+Details on event kinematics and PE timing for signal an backgrounds are given in Section~\ref{sec:kinematics_and_timing}.
 
 
 
