--- a/B8Paper/25-EventTiming.tex
+++ b/B8Paper/25-EventTiming.tex
@@ -8,16 +8,16 @@ electron pair is very similar. Large fraction of events have a nearly back-to-ba
 equal energy split between electrons. To simulate 0\nbb- and 2\nbb-decay events we use a Monte Carlo generator based on phase 
 factors from Ref.~\cite{Jenni}. Similarity in kinematics of 0\nbb- and 2\nbb-decay events is demonstrated in Fig.~\ref{fig:Kinematics}.
 
-The electron angular correlations for 0\nbb-decay are noticeably different from 2\nbb-decay due to a contribution from
-neutrinos wave-function even at vanishingly small energies of the neutrinos~\cite{Jenni}. However, any practical use of this difference 
-in separating 0\nbb-decay from 2\nbb-decay would require extremely large number of candidate events. Given half-time of 2\nbb-decay 
-and upper limits on the half-time of 0\nbb-decay, electron angular correlations won't bring decisive separation power in controlling 
-2\nbb-decay background in currently planned 0\nbb-decay experiments. Excellent energy resolution at the Q-value is the key parameter
+The electron angular correlations for 0\nbb-decay are noticeably different from 2\nbb-decay due to a contribution from the
+neutrino wave-functions even at vanishingly small energies of the neutrinos~\cite{Jenni}. However, any practical use of this difference 
+in separating 0\nbb-decay from 2\nbb-decay would require extremely large number of candidate events. Given the half-time of 2\nbb-decay 
+and upper limits on the half-time of 0\nbb-decay, electron angular correlations will not bring a decisive separation power in controlling 
+2\nbb-decay background in currently planned 0\nbb-decay experiments. Excellent energy resolution at the Q-value remains the key parameter
 in 2\nbb~background suppression.
 
-While we don't exclude that the angular correlations as an input to a multivariative technique may improve sensitivity of 0\nbb-decay 
+While we do not exclude that the angular correlations as an input to a multivariative technique may improve sensitivity of 0\nbb-decay 
 searches, in this paper we assume that there is no difference in the event topology between 0\nbb-~and 2\nbb-decay events. Any conclusions 
-about 0\nbb-decay events also hold for 2\nbb-decay when total energy of the electrons in 2\nbb-decay events is close to the Q-value.
+about 0\nbb-decay events also hold for 2\nbb-decay when the total energy of the electrons in 2\nbb-decay events is close to the Q-value.
 
 
 \begin{figure*}[ht]
@@ -39,7 +39,7 @@ about 0\nbb-decay events also hold for 2\nbb-decay when total energy of the elec
 Examining the kinematics for one of the 0\nbb~electrons with equal energy split, a 1.26~MeV electron travels a total path length of 0.X~cm, 
 has a distance from the origin of 0.X~cm in 0.0X$\pm$0.00X~ns  and takes 0.0X$\pm$0.00X~ns to drop below Cherenkov threshold. 
 We note that due to scattering of the electron, the final direction of the electron before it stops does not correspond to the initial 
-direction; however the scattering angle is small while the majority of Cherenkov light is produced.
+direction; however the scattering angle is small at the time the majority of Cherenkov light is produced.
 
 Figure~\ref{fig:ArrivalTimeDist} shows the output of the detector simulation for 1000 simulated \Te~ 0\nbb-decay 
 events. The left panel in Fig.~\ref{fig:ArrivalTimeDist} compares PE arrival time between Cherenkov and scintillation light  
@@ -66,7 +66,7 @@ topographical reconstruction.
 \end{figure*}
 
 
-Selection of PEs with relatively small arrival time allows to select a sample of PEs with high fraction of directional Cherenkov light.
+Selection of PEs with relatively small arrival time allows the selection of a sample of PEs with a high fraction of directional Cherenkov light.
 This allows for event topology reconstruction. In particular, signal-like events with exactly two electrons can be separated from events 
 with only one electron such as from \B~solar neutrino interactions.
 
@@ -93,16 +93,16 @@ PE sample for signal and background events.
 
 \subsection{\B~background}
 
-For a detector similar to our model \B~background is significant due to large mass.
-
-Electrons from elastic scattering of \B~solar neutrinos have nearly flat energy spectrum around the 
+For a detector similar to our model, \B~background is significant due to large total mass of the liquid scintillator in
+the active region of the detector.
+Electrons from elastic scattering of \B~solar neutrinos have nearly a flat energy spectrum around the 
 Q-value~\cite{SNOp-B8-bkg}. We simulate \B~background as a single monochromatic electron with energy of 2.53~MeV 
 (Q-value of \Te). A 2.53~MeV electron travels a total path length of 0.X~cm, has a distance from the origin of 0.X~cm in 
 0.0X$\pm$0.00X~ns  and takes 0.0X$\pm$0.00X~ns to drop below Cherenkov threshold.
 
-The scintillation PE timing distribution is unchanged compared to 0\nbb-decay since the electron's path lengths at these energies 
-are too short to affect the effective vertex of the scintillation light. The number of Cherenkov photons is increased 
-(see Fig.~\ref{fig:ArrivalTimeDist} and~\ref{fig:NPhotDist}) due to the increased electron kinetic energy but this alone is not 
+The scintillation PE timing distribution is unchanged compared to 0\nbb-decay since the electron's path length at these energies 
+is too short to affect the effective vertex of the scintillation light. The number of Cherenkov photons is increased 
+(see Fig.~\ref{fig:ArrivalTimeDist} and~\ref{fig:NPhotDist}) due to the increased electron kinetic energy, but this alone is not 
 sufficient to distinguish \B~events from 0\nbb-decay. However, it may provide an extra handle on signal-background separation in 
 combination (e.g. by using multivariative techniques) with other event parameters.
 
