--- a/B8Paper/50-Conclusions.tex
+++ b/B8Paper/50-Conclusions.tex
@@ -8,7 +8,7 @@ technique may be further developed and adopted by future large scale
 liquid scintillator detectors to suppress background coming from
 $^{8}$B solar neutrino interactions in the detector volume. The
 performance of the technique is mostly affected by chromatic
-dispersions, vertex reconstruction and the time profile of the emission of scintillation light. We show that a liquid scintillator detector
+dispersion, vertex reconstruction and the time profile of the emission of scintillation light. We show that a liquid scintillator detector
 with a scintillation rise time constant $\tau_r=$5~ns provide sufficient cherenkov-scintillation light separation and potentially allows
 for use of the spherical harmonics analysis
 as an extra handle to extract 0{\nbb} decay signal.
