--- a/B8Paper/25-EventTiming.tex
+++ b/B8Paper/25-EventTiming.tex
@@ -42,26 +42,24 @@ We note that due to scattering of the electron, the final direction of the elect
 direction; however the scattering angle is small at the time the majority of Cherenkov light is produced.
 
 Figure~\ref{fig:ArrivalTimeDist} shows the output of the detector simulation for 1000 simulated \Te~ 0\nbb-decay 
-events. The left panel in Fig.~\ref{fig:ArrivalTimeDist} compares PE arrival time between Cherenkov and scintillation light  
-and the right panel in Fig.~\ref{fig:ArrivalTimeDist} zooms in on the Cherenkov photon distribution which is key to direction and 
-topographical reconstruction.
+events. The left-hand panel in Fig.~\ref{fig:ArrivalTimeDist} compares PE arrival time between Cherenkov and scintillation light.
+The right-hand panel shows the composition of the early PE sample, which is key to direction and topographical reconstruction, 
+selected with the time cut of 33.5~ns. Each \Te~ 0\nbb-decay produces total of 6X$\pm$X PEs in the early PE sample. 
+There are 3X$\pm$X scintillation and 3X$\pm$X Cherenkov PEs.
 
 
 \begin{figure*}[ht]
   \centering
   \includegraphics[width=0.45\textwidth]{hT_Te130.pdf}
-  \includegraphics[width=0.45\textwidth]{hTche_Te130_B8.pdf}
+  \includegraphics[width=0.45\textwidth]{hMomNPhot_Te130.pdf}
   \caption{\emph{Left:} Photo-electron (PE) arrival times after
     application of the photo-detector transit time spread (TTS) of 100~ps for the default simulation 
     of \Te~0\nbb-decay produced at the center of the detector. 
-    Scintillation PE arrival time distribution is compared for \nbb-decay (dashed blue line) and
-    \Cten~events (dotted green line). The corresponding distribution for \B~events is not shown
-    because it is indistinguishable from the distribution for \nbb-decay. Cherenkov PE arrival
-    times are shown for \nbb-decay (\emph{solid red line}) to demonstrate their contribution to the early PE sample.
+    Scintillation PEs (blue solid line) are compared to Cherenkov PEs (red dotted line)
     The vertical line at 33.5~ns indicates the time cut for the selection of the early PE sample.
-    The shape of scintillation PE arrival times for \B~events
-    \emph{Right:} Comparison between Cherenkov PEs arrival time for \Te~0\nbb-decay (\emph{solid line}), 
-    \B~(\emph{dashed line}).}
+    \emph{Right:} Composition of the early PE sample: 
+    number of Cherenkov (\emph{dashed red line}), scintillation (\emph{dotted blue line}), 
+    and total (\emph{solid black line}) PEs per event.} 
 \label{fig:ArrivalTimeDist}
 \end{figure*}
 
@@ -69,26 +67,6 @@ topographical reconstruction.
 Selection of PEs with relatively small arrival time allows the selection of a sample of PEs with a high fraction of directional Cherenkov light.
 This allows for event topology reconstruction. In particular, signal-like events with exactly two electrons can be separated from events 
 with only one electron such as from \B~solar neutrino interactions.
-
-As shown in Fig.~\ref{fig:ArrivalTimeDist}, for events produced at the center of the detector, a time cut of 33.5~ns on the PE arrival 
-time selects a sample of early PEs that includes the majority of directional Cherenkov photons. Scintillation PEs also are 
-selected with this time cut. Figure~\ref{fig:NPhotDist} shows the total number of scintillation and Cherenkov PE per event in the early 
-PE sample for signal and background events.
-
-
-
-\begin{figure*}[ht]
-  \centering
-  \includegraphics[width=0.45\textwidth]{hMomNPhot_Te130.pdf}
-  \includegraphics[width=0.45\textwidth]{hMomNPhot_1el_2p529MeV.pdf}
-%  \includegraphics[width=0.33\textwidth]{hMomNPhot_C10.pdf}
-  \caption{Early PE sample composition: number of Cherenkov (\emph{dashed red line}), scintillation
-    (\emph{dotted blue line}), and total (\emph{solid black line}) PEs per event
-    for the simulation of 1000 $^{130}$Te 0\nbb-decay events (\emph{left panel}),
-    1000 $^8$B events (\emph{middle panel}).}%, and 4152 \C~events (\emph{right panel}).}
-\label{fig:NPhotDist}
-\end{figure*}
-
 
 
 \subsection{\B~background}
@@ -100,9 +78,18 @@ Q-value~\cite{SNOp-B8-bkg}. We simulate \B~background as a single monochromatic 
 (Q-value of \Te). A 2.53~MeV electron travels a total path length of 0.X~cm, has a distance from the origin of 0.X~cm in 
 0.0X$\pm$0.00X~ns  and takes 0.0X$\pm$0.00X~ns to drop below Cherenkov threshold.
 
-The scintillation PE timing distribution is unchanged compared to 0\nbb-decay since the electron's path length at these energies 
-is too short to affect the effective vertex of the scintillation light. The number of Cherenkov photons is increased 
-(see Fig.~\ref{fig:ArrivalTimeDist} and~\ref{fig:NPhotDist}) due to the increased electron kinetic energy, but this alone is not 
-sufficient to distinguish \B~events from 0\nbb-decay. However, it may provide an extra handle on signal-background separation in 
-combination (e.g. by using multivariative techniques) with other event parameters.
+The shape of scintillation and Cherenkov PE timing distributions in \B~events match very closely the shape of corresponding distributions
+for 0\nbb-decay events shown in Fig.~\ref{fig:ArrivalTimeDist}. The electron path length is too short compared to the detector size to 
+introduce any noticable difference in the shape of PE timing distributions between a single electron from \B~events and two 
+electrons from 0\nbb-events.
+
+Each \B~event produces total of 7X$\pm$X PEs in the early PE sample. There are 3X$\pm$X scintillation and 4X$\pm$X Cherenkov PEs.
+The total energy depositited in the detector in \B~and 0\nbb-decay events is the same. This leads to the same amount of 
+scintillation light produced in the detector. The number of Cherenkov photons is slightly higher for \B~events because the Cherenkov 
+light is being produced by a single electron with the same kinetic energy as the sum of kinetic energy of two electrons 
+in 0\nbb-decay events. 
+
+We do note use small difference in the total number of PEs in the early PE sample to separate 0\nbb-decay signal from \B~background.
+However, it may provide an extra handle on signal-background separation in a multivariative analysis when combined with directional
+and topographical information.
 
