--- a/B8Paper/30-SphericalHarmonics.tex
+++ b/B8Paper/30-SphericalHarmonics.tex
@@ -24,7 +24,7 @@ may allow for suppression of \B~events based on the position of the sun.
 
 Identification of the Cherenkov clusters is challenging due to much higher amount of uniformly distributed scintillation light that is
 produced in every event. We found that spherical harmonics analysis on an early PE sample which has a relatively high fraction of 
-Cherenkov PE makes it possible to separate some of the 0\nbb-decay signal events from backgrounds.
+Cherenkov PE makes it possible to separate some {\bf (quantify? this paragraph may belong to Sec.4 intro.)} of the 0\nbb-decay signal events from backgrounds.
 
 \subsection{Description of Spherical Harmonics Analysis}
 
@@ -39,18 +39,18 @@ two special cases of an idealized 0\nbb-decay topology.
 \begin{figure*}[h]
   \centering
 %  \begin{tabular}{c c c}
-  \includegraphics[width=0.45\textwidth]{hDisplay_topology180_5MeV.pdf}
-  \includegraphics[width=0.45\textwidth]{hDisplay_topology90_5MeV.pdf}
-  \includegraphics[width=0.45\textwidth]{hDisplay_1el_10MeV.pdf}
+  \includegraphics[width=0.33\textwidth]{hDisplay_topology180_5MeV.pdf}
+  \includegraphics[width=0.33\textwidth]{hDisplay_topology90_5MeV.pdf}
+  \includegraphics[width=0.33\textwidth]{hDisplay_1el_10MeV.pdf}
 %  \end{tabular}
-  \includegraphics[width=0.45\textwidth]{hMultipleMoment_CHELight_VtxSmear0cm_VtxShiftX0cm_999p9ns_5p0MeV_center_NoMultScat.pdf}
-  \caption{\emph{Top panels and bottom left panel:} Idealized event displays for the three representative event topologies: two 5~MeV 
-    back-to-back electrons (\emph{top left}), two 5~MeV electrons at 90$^{\circ}$ angle (\emph{top right}), and a single 10~MeV electron
-    (\emph{bottom right}). Multiple scattering is turned off in the simulation to emphasize the difference in the mutual orientation of
+  \includegraphics[width=0.8\textwidth]{hMultipleMoment_CHELight_VtxSmear0cm_VtxShiftX0cm_999p9ns_5p0MeV_center_NoMultScat.pdf}
+  \caption{\emph{Top panels:} Idealized event displays for the three representative event topologies: two 5~MeV 
+    back-to-back electrons (\emph{top left}), two 5~MeV electrons at 90$^{\circ}$ angle (\emph{top middle}), and a single 10~MeV electron
+    (\emph{top right}). Multiple scattering is turned off in the simulation to emphasize the difference in the mutual orientation of
     Cherenkov rings for the three topologies. For the illustration purposes 100\% QE is applied to Cherenkov photons (triangles)
     and the default QE is applied to scintillation photons (dots). All electrons originate at the center of the
     detector. One typical event is shown for each topology.
-    \emph{Bottom right panel:} Normalized power spectrum $S_l$ calculated for distribution of Cherenkov photons only. The three
+    \emph{Bottom panel:} Normalized power spectrum $S_l$ calculated for distribution of Cherenkov photons only. The three
     topologies are compared: two 5~MeV back-to-back electrons (\emph{solid red line}), two 5~MeV electrons at 90$^{\circ}$ angle
     (\emph{dotted magenta line}), and a single 10~MeV electron (\emph{dashed blue line}). For each topology 100 events were simulated. 
     The normalized power values $S_l$'s were calculated for each individual event. The horizontal lines correspond to the mean values of 
@@ -112,50 +112,27 @@ S_l = \frac{s_l}{\sum_{l=0}^{\infty} s_l} =  \frac{s_l}{\int_{\Omega} |f(\theta,
 
 can be used to compare the shapes of various functions $f(\theta,\phi)$ with different normalization. As the total number of PEs detected on the detector sphere fluctuates from event to event we use the normalized power $S_l$.
 
-Figure~\ref{fig:ThreeTopologies_Display_5MeV}(\emph(bottom right)) compares the normalized power spectra for the three representative event topologies.
-There is sufficient separation between these three idealized event topologies.
+Bottom panel in Fig.~\ref{fig:ThreeTopologies_Display_5MeV} compares the normalized power spectra for the three representative event topologies.
+The normalized power spectrum is different for all three event topologies. As expected, the largest difference is between single track and
+back-to-back events.
 
 In practice, at energies relevant to 0\nbb-decay Cherenkov rings become very fuzzy due to electron multiple scattering. In most cases $\sim$1~MeV 
-electrons produce randomly shaped clusters of Cherenkov photons around the direction of the electron track. Examples of such Cherenkov clusters
-for the same three representative topologies are shown in Fig.~\ref{fig:ThreeTopologies_Display}. Here the multiple scattering process is included 
-in the simulation and the total kinetic energy of the electrons is equal to the Q-value of the \Te.
+electrons produce randomly shaped clusters of Cherenkov photons around the direction of the electron track. 
 
 
-\begin{figure*}[h]
-  \centering
-%  \begin{tabular}{c c c}
-  \includegraphics[width=0.45\textwidth]{hDisplay_topology180_2p529MeVTot}
-  \includegraphics[width=0.45\textwidth]{hDisplay_topology90_2p529MeVTot}
-  \includegraphics[width=0.45\textwidth]{hDisplay_1el_2p529MeV}
-%  \end{tabular}
-  \includegraphics[width=0.45\textwidth]{hMultipleMoment_cheLight_VtxSmear0cm_VtxShiftX0cm_999p9ns_center.pdf}
-  \caption{\emph{Top panels and bottom left panel:} Event displays for the three representative event topologies with the electron energies relevant 
-    for the {\Te} 0{\nbb}-decay: two back-to-back 1.26~MeV electrons (\emph{top left}), two 1.26~MeV electrons at 90$^{\circ}$ angle 
-    (\emph{top right}), and a single 2.53~MeV electron (\emph{bottom left}). Multiple scattering is now properly included in the simulation
-    For the illustration purposes 100\% QE is applied to Cherenkov photons (triangles) and the default QE is applied to scintillation 
-    photons (dots). All electrons originate at the center of the detector. One typical event is shown for each topology.
-    \emph{Bottom right panel:} Normalized power spectrum $S_l$ calculated for distribution of Cherenkov photons only. The three
-    topologies are compared: two back-to-back 1.26~MeV electrons (\emph{solid red line}), two 1.26~MeV electrons at 90$^{\circ}$ angle
-    (\emph{dotted magenta line}), and a single 2.53~MeV electron (\emph{dashed blue line}). For each topology 1000 events were simulated.
-    The normalized power values $S_l$'s were calculated for each individual event. The horizontal lines correspond to the mean values of
-    $S_l$ within each event topology. The vertical bars show one standard deviation from the mean value.}
-  \label{fig:ThreeTopologies_Display}
-\end{figure*}
+%However, a guess about the event topology still can be made by comparing 
+%photon distributions in different segments of the detector sphere. Spherical harmonics decomposition is a natural tool for making such 
+%comparison between the segments. As shown in Fig.~\ref{fig:ThreeTopologies_Display}~(\emph{bottom right}) spherical harmonics power spectrum 
+%of Cherenkov photons only still provides noticeable separation between all three event topologies.
 
+Examples of \Te~ 0\nbb~and \B~events simulated at the center of the detector are shown in Fig.~\ref{fig:Te130_Display}. 
+\Te~ events are generated based on the phase factors described in~\cite{Kotila_phase_factors}.
+$^{8}$B events are implemented as monochromatic electrons with the initial direction along $x$-axis. Multiple scattering is now included.
+The default QE is applied. Figure~\ref{fig:Te130_Display} shows early PEs that pass 33.5~ns time cut.
 
-At 2.53~MeV with multiple scattering included, the difference in the Cherenkov photon distribution for the three representative topologies 
-is not as dramatic as in the idealized simulation of 10~MeV events. However, a guess about the event topology still can be made by comparing 
-photon distributions in different segments of the detector sphere. Spherical harmonics decomposition is a natural tool for making such 
-comparison between the segments. As shown in Fig.~\ref{fig:ThreeTopologies_Display}~(\emph{bottom right}) spherical harmonics power spectrum 
-of Cherenkov photons only still provides noticeable separation between all three event topologies.
-
-More realistic examples of \Te~ 0\nbb~and \B~events simulated at the center of the detector are shown in Fig.~\ref{fig:Te130_Display}. 
-\Te~ events are generated based on the phase factors described in~\ref{Kotila_phase_factors}.
-$^{8}$B events are implemented as monochromatic electrons with the initial direction along $x$-axis.
-Early photo-electrons (PEs), defined as those PEs from Cherenkov and scintillation light within 33.5~ns of the start of the event, are shown. 
-The default QE is applied.  In this more realistic example, the uniformly distributed scintillation light makes it more difficult to 
-visually distinguish the event topology. Nevertheless, Fig.~\ref{fig:Te130_Display}~(\emph{bottom panel}) shows that the spherical harmonics
-analysis still finds differences between two-track and single-track events.
+In this more realistic example, the uniformly distributed scintillation light makes it more difficult to 
+visually distinguish the event topology. The power spectra shown in the bottom pannel of Fig.~\ref{fig:Te130_Display}~
+are different only at $l$=0 and $l$=1. We propose to use this difference to separate 0\nbb-decay signal from \B~background events.
 
 \begin{figure*}[h]
   \centering
@@ -205,11 +182,11 @@ being radius vectors of the PE and the vertex in the original coordinates, respe
 %  \includegraphics[width=0.95\textwidth]{SphH_transform_sketch.JPG}
   \includegraphics[width=0.4\textwidth]{SphH_transform.pdf}
   \caption{Coordinate transformation applied to events that are
-    off-center. Solid circle schematically shows actual detector
-    boundaries. Dotted circle shows a new sphere of radius R$=$6.5~m
+    off-center. The solid circle schematically shows actual detector
+    boundaries. The dotted circle shows a new sphere of radius R$=$6.5~m
     with the event vertex position in the center. The radius vector of
-    each photon hit is stretched or shorten until intersection with
-    this new sphere using transformation $\vec{r}^{,}_{hit} =
+    each photon hit is stretched or shortened until the intersection with
+    this new sphere using the transformation $\vec{r}^{,}_{hit} =
     \frac{\vec{a}}{|\vec{a}|} \cdot R$. Where $\vec{r}^{,}_{hit}$ is a
     new radius vector of the photon hit, $R$ is detector sphere radius,
     and $\vec{a}=\vec{r}_{hit} - \vec{r}_{vtx}$ with $\vec{r}_{hit}$
