--- a/B8Paper/40-Performance.tex
+++ b/B8Paper/40-Performance.tex
@@ -16,13 +16,15 @@ As discussed below, a linear combination of $S_0$ and $S_1$ can be used to const
 separation between signal and background in 1-D space. We show distributions of this variable $S_{01}$ to demonstrate qualitatively 
 the separation between 0\nbb~and \B~events depending on a few key assumptions about the detector characteristics.
 
+{\it {\bf The following paragraph needs to be moved to intro and maybe re-phrased. }
 Since the goal of this paper is to describe the technique of spherical harmonics analysis for separating
 different event topologies relevant for 0\nbb-decay searches in a generic liquid scintillator detector, we intentionally refrain from any 
 quantitative estimates on the improvements in sensitivity to 0\nbb~decay. The actual improvements in sensitivity due to spherical 
 harmonics analysis would depend on various details of a given experimental setup. Therefore, we believe that detailed quantitative 
 sensitivity studies are more appropriate in the context of a particular 0\nbb~decay experiment which is beyond the scope of this paper.
+}
 
-\subsection{Central events with perfect vertex reconstruction}
+\subsection{Central events with no uncertainty on the vertex position}
 
 We start evaluating the performance of the spherical harmonics analysis by looking at events that originate at the center
 of the detector and by assuming perfect reconstruction of the event vertex position. For such events, a time cut of 33.5~ns on 
@@ -73,9 +75,10 @@ brings extra separation power which\ is in addition to the energy measurements.
 \label{fig:SL_Te_33p5ns_center}
 \end{figure*}
 
+%separation = 0.915454
+%overlap = 0.521
 
-
-\subsection{Experimental challenges}
+\subsection{Experimental challenges: chromatic dispersion and vertex resolution}
 
 So far only events at the center of the detector have been considered. Precise vertex reconstruction has been also assumed. 
 Here we discuss performance of the spherical harmonics analysis for events that originate throughout the whole fiducial volume
@@ -92,59 +95,37 @@ reach the side of the detector that is closer to the vertex much earlier than Ch
 detector. The time cut thus has to take into account the total distance traveled by each individual photon.
 
 We found that a differential time cut defined as $\Delta t=t^{phot}_{measured} - t^{phot}_{predicted}<$1~ns selects photons with a 
-sufficient fraction being Cherenkov photons. However, when this differential time cut is applied, two factors significantly reduce 
-the Cherenkov/scintillation light separation in the early PE sample, and therefore, reduce discrimination power of the spherical 
-harmonics analysis. These factors are chromatic dispersion and vertex resolution. In the following we describe both effects and 
+sufficient fraction being Cherenkov photons. However, when this differential time cut is applied, 
+chromatic dispersion and vertex resolution significantly reduce the Cherenkov/scintillation light separation in the early PE sample.
+and therefore, reduce discrimination power of the spherical harmonics analysis. In the following we describe both effects and 
 propose solutions to mitigate their influence on the spherical harmonics analysis.
 
-\subsubsection{Chromatic dispersion}
-One reduction in the Cherenkov/scintillation light separation comes from chromatic dispersion. The predicted time, 
+%\subsubsection{Chromatic dispersion}
+The predicted time, 
 $t^{phot}_{predicted}=l/v^{phot}$, depends on the distance, $l$, traveled by the photon and the velocity of the photon, 
-$v^{phot}$.  Since the wavelength information is not available for a given PE, we must use an average index of refraction, $n$, 
+$v^{phot}$.  Since the wavelength information is not available for a given PE, we use an average index of refraction, $n$, 
 and define the photon velocity as $v^{phot} = c/n$. This uncertainty on the photon velocity makes the differential time cut less 
 effective in separating Cherenkov light from scintillation light. 
 
-Poor Cherenkov/scintillation light separation reduces the effectiveness of the spherical harmonics analysis. For each event topology 
-spherical harmonics power spectrum is mostly determined by distinct distributions of Cherenkov photons. At the same time scintillation 
-photons represent uniform background noise for event topology reconstruction.
-
-In general, selection of an early PE sample for any event within a fiducial volume of a reasonable size has to be done with a time
-cut that would be affected by chromatic dispersion. We define fiducial volume as $R<3$~m, where $R$ is the distance between event vertex 
-and the center of the detector. Figure~\ref{fig:SL_Te_SmearX0cm_momDT1ns_rndVtx_3p0m} demonstrates performance of the spherical 
-harmonics analysis for events within this fiducial volume. Perfect vertex reconstruction is still assumed for events shown in 
-Fig.~\ref{fig:SL_Te_SmearX0cm_momDT1ns_rndVtx_3p0m}. A differential time cut of 1~ns is used.
-Reduced separation between signal and background on Fig.~\ref{fig:SL_Te_SmearX0cm_momDT1ns_rndVtx_3p0m} compared to 
-Fig.~\ref{fig:SL_Te_33p5ns_center} is due to the effect of chromatic dispersion which does not allow to achieve as high fraction of 
-Cherenkov PEs in the early PE sample as in the case of central events when an absolute time cut of 33.5~ns is used.
+%Poor Cherenkov/scintillation light separation reduces the effectiveness of the spherical harmonics analysis. For each event topology 
+%spherical harmonics power spectrum is mostly determined by distinct distributions of Cherenkov photons. At the same time scintillation 
+%photons represent uniform background noise for event topology reconstruction.
 
 
-\begin{figure*}[h]
-  \centering
-  \includegraphics[width=0.49\textwidth]{hS0vsS1_Te130_1el_allLight_VtxSmear0cm_VtxShiftX0cm_momDT1p0ns_rndVtx_3p0mSphere.pdf}
-  \includegraphics[width=0.49\textwidth]{hS01_allLight_VtxSmear0cm_VtxShiftX0cm_momDT1p0ns_rndVtx_3p0mSphere.pdf}
-  \caption{\emph{Left:} Scatter plot of $S_0$ versus $S_1$ for a simulation of 1000 signal (\emph{red crosses}) and background
-    (\emph{blue triangles}) events. Event verticies are uniformly distributed within the fiducial volume, $R<3$~m.
-    Perfect reconstruction of the vertex position is assumed. Differential cut of 
-    $\Delta t=t^{phot}_{measured} - t^{phot}_{predicted}<$1~ns is applied to select early PE sample.
-    The default QE and 100\% photo-coverage is used in the simulation.
-    Black dashed line corresponds to a linear fit to define 1-D variable $S_{01}$ (see text for details).
-    \emph{Right:} Comparison of the $S_{01}$ distribution between signal (\emph{red solid line}) and background (\emph{blue dashed line}).}
-  \label{fig:SL_Te_SmearX0cm_momDT1ns_rndVtx_3p0m}
-\end{figure*}
-
-
-\subsubsection{Vertex resolution} 
-Imprecise knowledge of the vertex position affects the spherical harmonics analysis in two ways. First, similarly to the effect of chromatic 
+%\subsubsection{Vertex resolution} 
+%Imprecise knowledge of the vertex position affects the spherical harmonics analysis in two ways. First, s
+Similarly to the effect of chromatic 
 dispersion, the vertex uncertainty makes the differential time cut less efficient in separating Cherenkov and scintillation light. 
 An uncertainty on the vertex position leads to an uncertainty on the photon predicted travel time, $t^{phot}_{predicted}$, which in turn
 increases the probability to mix scintillation and Cherenkov light in the early PE sample.
 
-Second, in the case of single electron event topology, a small error in vertex reconstruction could cause a large effect on the 
+%Second, 
+In addition, in the case of single electron event topology, a small error in vertex reconstruction could cause a large effect on the 
 normalized power spectrum of spherical harmonics.
 
-Early PE sample of the single electron topology typically has a strong asymmetry due
+The early PE sample of the single electron topology typically has a strong asymmetry due
 to preferential directionality of Cherenkov PEs that are selected together with uniformly distributed scintillation PEs. 
-A mis-reconstructed vertex introduces an artificial asymmetry in the selection of scintillation PE. Vertex shifts parallel to the direction of 
+A mis-reconstructed vertex introduces an artificial asymmetry in the selection of scintillation PEs. Vertex shifts parallel to the direction of 
 the electron track have the largest effect compared to the shifts in the transverse direction. 
 
 If a vertex is shifted in the direction opposite to the track of the electron, the differential time cut selects more scintillation 
@@ -158,11 +139,24 @@ If a vertex is shifted in the same direction as the direction of the electron, t
 photons that are emitted in the direction opposite to the electron track. Therefore, the asymmetry of Cherenkov PEs would be counter
 balanced by scintillation PEs, which in turn, would move $S_1$ to lower values.
 
-Figure~\ref{fig:SL_Te_SmearX3cm_momDT1ns_rndVtx_3p0m} shows the performance of the spherical harmonics analysis for events simulated
-in the entire fiducial volume with vertex reconstruction resolution of 3~cm. The vertex resolution is implemented
-as a substitution of the actual vertex position with a variable that has Gaussian smearing around the actual position along all three
-$x-$, $y-$, and $z-$ directions around the actual position. The smearing is done with three independent 
-Gaussian distributions that have the same width, $\sigma_x = \sigma_y = \sigma_z =$3~cm.
+
+\subsection{Events in a fiducial volume with an uncertainty on the vertex position}
+We found that in our default detector model the separation power of the spherical harmonics analysis is reduced to X when
+chromatic dispersion and vertex resolution are taken into account.
+
+We simulated 1000 signal and background events that have their verticies uniformly distributed within a fiducial volume of $R<3$~m, 
+where $R$ is the distance between the event vertex and the center of the detector. To implement an uncertainty on the vertex 
+reconstruction we apply a 3~cm smearing around the actual vertex position for each simulated event. The smearing is done along $x$, $y$, 
+and $z$ directions with three independent Gaussian distributions of the same width, $\sigma_x = \sigma_y = \sigma_z =$3~cm.
+
+Figure~\ref{fig:SL_Te_SmearX3cm_momDT1ns_rndVtx_3p0m} shows the performance of the spherical harmonics analysis under these more realistic 
+assumptions. The overlap of the S01 distributions between signal and background is Y\%. The spherical harmonics analysis
+does not bring any significant separation between signal and background in our default detector model after the chromatic dispersion and
+vertex resolution are taken into account. However, properties of the liquid scintillator can be adjusted to improve 
+the performance of the spherical harmonics analysis. In the folowing we show that a single change in the scintillation rise time
+restores most of the separation power that was shown previously in Fig.~\ref{fig:SL_Te_33p5ns_center}.
+
+
 
 \begin{figure*}[h]
   \centering
@@ -178,28 +172,16 @@ Gaussian distributions that have the same width, $\sigma_x = \sigma_y = \sigma_z
 \label{fig:SL_Te_SmearX3cm_momDT1ns_rndVtx_3p0m}
 \end{figure*}
 
-As can be seen in Fig.~\ref{fig:SL_Te_SmearX3cm_momDT1ns_rndVtx_3p0m}, the vertex resolution effect significantly reduces discrimination power 
-of the spherical harmonics analysis in our default detector model.
-
-%{\bf Solution to this problem would be a better selection criteria of
-%  early light. It has to preserve high admixture of the Cherenkov
-%  photons, but needs to select scintillation photons in a more uniform
-%  manner. Working on it, but may not be simple so I don't want to
-%  include it in this paper.}
+%separation = 0.357271
+%overlap = 0.793
 
 
-\subsection{Requirements for the next generation liquid scintillator detectors}
-To take full advantage of topology reconstruction capabilities in the next generation liquid scintillator detectors optical properties of the 
-scintillator has to be tuned to allow for better Cherenkov/scintillation light separation.
-
-The effects due to chromatic dispersion can be addressed by using liquid scintillators with a more narrow emission spectrum. For example,
-such as described in Ref.~\cite{LS_narrow_emission}.
-
+\subsection{Importance of the liquid scintillator properties}
 Strong dependence on the vertex resolution can be addressed by choosing a liquid scintillator mixture with a more delayed emission 
-of scintillation light with respect to Cherenkov light. With a larger delay in scintillation light, a high fraction of Cherenkov light 
-can be maintained in the early PE sample even if photon track length is mis-reconstructed due to imprecise reconstruction of the vertex 
+of scintillation light with respect to Cherenkov light. With a larger delay in scintillation light, a higher fraction of Cherenkov light 
+can be maintained in the early PE sample even if a photon track length is mis-reconstructed due to imprecise reconstruction of the vertex 
 position. In addition, if the fraction of scintillation light is small compared to Cherenkov light, the distortions in the uniformity of 
-the scintillation PE due to shifted reconstructed vertex position would not significantly affect spherical harmonics power spectrum.
+the scintillation PE due to shifted reconstructed vertex position does not significantly affect spherical harmonics power spectrum.
 
 While our default detector model assumes scintillation rise time of $\tau_r=$1~ns, scintillation rise time up to $\tau_r=$7~ns can 
 be achieved (see Ref.~\ref{Mingfang_slow_rise_time}). As a test we repeated spherical harmonics analysis on 0\nbb-decay and \B~events after
@@ -226,4 +208,22 @@ Cherenkov and scintillation light to make spherical harmonics analysis a potenti
 \label{fig:SL_Te_SmearX3cm_momDT1ns_rndVtx_3p0m_SciRT5p0ns}
 \end{figure*}
 
+%separation = 0.665755
+%overlap = 0.642643
+
+Furthermore, the effects due to chromatic dispersion can be addressed by using liquid scintillators with a narrower emission spectrum. For example,
+such as described in Ref.~\cite{LS_narrow_emission}.
+
+
+%Start:
+%separation = 0.915454
+%overlap = 0.521
+
+%Middle:
+%separation = 0.357271
+%overlap = 0.793
+
+%Final:
+%separation = 0.665755
+%overlap = 0.642643
 
